# ToDo

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  completion_rate.c
app/src/main/java/com/example/guessgame/: AnalyticsActivity.kt  CompletionRateCalculator.kt  Constants.kt  HomeActivity.kt  MainActivity.kt  NotificationWorker.java  SignupActivity.kt
app/src/main/res/layout/: activity_analytics.xml  activity_home.xml  activity_main.xml  activity_signup.xml  dialog_add_task.xml  dialog_edit_task.xml  item_task.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: arrays.xml  strings.xml
gradle/: libs.versions.toml
